<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Comet Rider</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="displaymap">Display Map</string>
    <string name="hello_world">Hello World!</string>
    <string name="from">From: </string>

    <string-array name="bus_stop_choices">
        <item>UTD Berkner</item>
        <item>McCallum</item>
        <item>President George Bush Turnpike</item>
        <item>Walmart</item>
    </string-array>

    <string name="to">To: </string>
    <string name="title_activity_display_map">DisplayMapActivity</string>
    <string name="next">Next</string>
    <string name="desc">desc</string>
    <string name="departsAt">Bus departs at:</string>
    <string name="reachesAt">Bus reaches at:</string>
    <string name="set_alarm">Set Reminder</string>

    <string-array name="day_choices">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="time_choices">
        <item>On Time</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
    </string-array>

    <string name="day">Day: </string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="temp">temp</string>
    <string name="timechosen">Bus departs: </string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="triggerBefore">Reminder: </string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_display_twitter">DisplayTwitterActivity</string>
    <string name="title_activity_sa_swipe">SaSwipe</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tabs_with_swipe">TabsWithSwipe</string>
    <string name="title_activity_t2">MainActivity</string>
    <string name="leavingFrom">Leaving from: </string>
    <string name="goingTo">Going to: </string>
    <string name="select_ringtone">Select notification tone </string>
    <string name="reminder_list">Reminder List</string>
    <string name="title_activity_reminder_list">ReminderList</string>
    <string name="noRem">No Reminders set yet</string>
    <string name="title_activity_reminder_trigger">ReminderTrigger</string>
  	<string name="yourBus">Your bus is about to depart!!</string>
  	<string name="stopAlarm">Stop Alarm</string>
  	
</resources>
